[package]
name = "smallstring"
version = "0.2.0"
authors = ["Jack Fransham <moonfudgeman@hotmail.co.uk>"]
repository = "https://github.com/jFransham/smallstring"
description = "'Small string' optimization: store small strings on the stack using smallvec"
license = "MIT"

[features]
std = ["smallvec/std"]
default = ["std"]

[dependencies.smallvec]
version = "0.6"
default-features = false
